Fixed mobile padding for footer and content areas, adjusted nav spacing so it should align with content

--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -303,7 +303,7 @@ img.figure {
 		line-height: 1px;
 	}
 	#nav ul {
-		margin: 0 0 0 4px;
+		margin: 0;
 		padding: 0;
 	}
 	#nav ul li {
@@ -313,7 +313,7 @@ img.figure {
 	}
 	#nav ul li a, #nav ul li a:active, #nav ul li a:visited {
 		display: block;
-		padding: 8px 9px;
+		padding: 8px 10px;
 		-webkit-transition: none;
 		-moz-transition: none;
 		-o-transition: none;
@@ -341,16 +341,14 @@ img.figure {
 		border: none;
 		border-radius: 0;
 		margin: 0;
-		padding: 1em;
+		padding: 0;
 		width: auto;
 	}
 	#content .inner {
-		padding: 0;
+		padding: 12px;
 	}
 	#footer {
 		font-size: 12px;
-		margin: 20px 10px;
-		padding: 0;
 		width: auto;
 	}	
 }
